# progmemer-discord-bot

./: .env.example  .gitignore  README.md  help_cog.py  jokes.py  main.py  memes.py  music.py  pyproject.toml  replit.nix  requirements.txt  responses.py  weather.py
src/: dice.py  help_cog.py  jokes.py  memes.py  music.py  notes.py  test.py  weather.py  youtube.py
